# trendrv1

./: .gitignore  README.md  app.py  backtest.py  cli.py  config.py  dataset.py  downloader.py  evaluate.py  features.py  models.py  pyproject.toml  requirements.txt
artifacts/models/: model_BTC-USD_1d.joblib  model_ETH-USD_1d.joblib  model_SOL-USD_1d.joblib
artifacts/reports/: backtest_ETH-USD_1d.csv  metrics_BTC-USD_1d.json  metrics_ETH-USD_1d.json  metrics_SOL-USD_1d.json
data/processed/: features_BTC-USD_1d.csv  features_ETH-USD_1d.csv  features_SOL-USD_1d.csv
data/raw/: BTC-USD_1d.csv  ETH-USD_1d.csv  SOL-USD_1d.csv
tests/: test_backtest.py  test_features.py  test_models.py
trendr/: app.py  cli.py  config.py
trendr/data/: features.py
trendr/modeling/: backtest.py  dataset.py  evaluate.py  models.py
