[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "trendr"
version = "0.2.0"
description = "ML-driven crypto price direction prediction with walk-forward backtesting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "lightgbm>=4.3.0",
    "shap>=0.45.0",
    "yfinance>=0.2.40",
    "typer[all]>=0.12.3",
    "joblib>=1.4.0",
    "plotly>=5.22.0",
    "streamlit>=1.36.0",
    "scipy>=1.13.0",
]

[project.scripts]
trendr = "trendr.cli:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
